--- a/src/buttons/css/buttons.css
+++ b/src/buttons/css/buttons.css
@@ -1,6 +1,6 @@
 /*csslint unqualified-attributes:false, outline-none:false*/
 
-.pure-button {
+.btn {
     font-size: 100%;
     *font-size: 90%; /*IE 6/7 - To reduce IE's oversized button text*/
     *overflow: visible; /*IE 6/7 - Because of IE's overly large left/right padding on buttons */
@@ -22,9 +22,9 @@
     transition: 0.1s linear box-shadow;
 }
 
-.pure-button-hover,
-.pure-button:hover,
-.pure-button:focus {
+.btn-hover,
+.btn:hover,
+.btn:focus {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#1a000000',GradientType=0);
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(40%, rgba(0,0,0, 0.05)), to(rgba(0,0,0, 0.10)));
     background-image: -webkit-linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
@@ -33,19 +33,19 @@
     background-image: -o-linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
     background-image: linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
 }
-.pure-button:focus {
+.btn:focus {
     outline: 0;
 }
-.pure-button-active,
-.pure-button:active {
+.btn-active,
+.btn:active {
     box-shadow: 0 0 0 1px rgba(0,0,0, 0.15) inset, 0 0 6px rgba(0,0,0, 0.20) inset;
 }
 
-.pure-button[disabled],
-.pure-button-disabled,
-.pure-button-disabled:hover,
-.pure-button-disabled:focus,
-.pure-button-disabled:active {
+.btn[disabled],
+.btn-disabled,
+.btn-disabled:hover,
+.btn-disabled:focus,
+.btn-disabled:active {
     border: none;
     background-image: none;
     filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
@@ -57,20 +57,20 @@
     box-shadow: none;
 }
 
-.pure-button-hidden {
+.btn-hidden {
     display: none;
 }
 
 /* Firefox: Get rid of the inner focus border */
-.pure-button::-moz-focus-inner{
+.btn::-moz-focus-inner{
     padding: 0;
     border: 0;
 }
 
-.pure-button-primary,
-.pure-button-selected,
-a.pure-button-primary,
-a.pure-button-selected {
+.btn-primary,
+.btn-selected,
+.btn-primary,
+.btn-selected {
     background-color: rgb(0, 120, 231);
     color: #fff;
 }
