--- a/src/forms/css/forms.css
+++ b/src/forms/css/forms.css
@@ -1,19 +1,19 @@
-.pure-form input[type="text"],
-.pure-form input[type="password"],
-.pure-form input[type="email"],
-.pure-form input[type="url"],
-.pure-form input[type="date"],
-.pure-form input[type="month"],
-.pure-form input[type="time"],
-.pure-form input[type="datetime"],
-.pure-form input[type="datetime-local"],
-.pure-form input[type="week"],
-.pure-form input[type="number"],
-.pure-form input[type="search"],
-.pure-form input[type="tel"],
-.pure-form input[type="color"],
-.pure-form select,
-.pure-form textarea {
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="url"],
+input[type="date"],
+input[type="month"],
+input[type="time"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="week"],
+input[type="number"],
+input[type="search"],
+input[type="tel"],
+input[type="color"],
+select,
+textarea {
     padding: 0.5em 0.6em;
     display: inline-block;
     border: 1px solid #ccc;
@@ -31,96 +31,96 @@
     -webkit-font-smoothing: antialiased;
 }
 
-.pure-form input[type="text"]:focus,
-.pure-form input[type="password"]:focus,
-.pure-form input[type="email"]:focus,
-.pure-form input[type="url"]:focus,
-.pure-form input[type="date"]:focus,
-.pure-form input[type="month"]:focus,
-.pure-form input[type="time"]:focus,
-.pure-form input[type="datetime"]:focus,
-.pure-form input[type="datetime-local"]:focus,
-.pure-form input[type="week"]:focus,
-.pure-form input[type="number"]:focus,
-.pure-form input[type="search"]:focus,
-.pure-form input[type="tel"]:focus,
-.pure-form input[type="color"]:focus,
-.pure-form select:focus,
-.pure-form textarea:focus {
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="date"]:focus,
+input[type="month"]:focus,
+input[type="time"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="week"]:focus,
+input[type="number"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="color"]:focus,
+select:focus,
+textarea:focus {
     outline: 0;
     outline: thin dotted \9; /* IE6-9 */
     border-color: #129FEA;
 }
 
-.pure-form input[type="file"]:focus,
-.pure-form input[type="radio"]:focus,
-.pure-form input[type="checkbox"]:focus {
+input[type="file"]:focus,
+input[type="radio"]:focus,
+input[type="checkbox"]:focus {
     outline: thin dotted #333;
     outline: 1px auto #129FEA;
 }
-.pure-form .pure-checkbox,
-.pure-form .pure-radio {
+.pure-checkbox,
+.pure-radio {
     margin: 0.5em 0;
     display: block;
 }
-.pure-form input[type="text"][disabled],
-.pure-form input[type="password"][disabled],
-.pure-form input[type="email"][disabled],
-.pure-form input[type="url"][disabled],
-.pure-form input[type="date"][disabled],
-.pure-form input[type="month"][disabled],
-.pure-form input[type="time"][disabled],
-.pure-form input[type="datetime"][disabled],
-.pure-form input[type="datetime-local"][disabled],
-.pure-form input[type="week"][disabled],
-.pure-form input[type="number"][disabled],
-.pure-form input[type="search"][disabled],
-.pure-form input[type="tel"][disabled],
-.pure-form input[type="color"][disabled],
-.pure-form select[disabled],
-.pure-form textarea[disabled],
-.pure-form input[readonly],
-.pure-form select[readonly],
-.pure-form textarea[readonly] {
+input[type="text"][disabled],
+input[type="password"][disabled],
+input[type="email"][disabled],
+input[type="url"][disabled],
+input[type="date"][disabled],
+input[type="month"][disabled],
+input[type="time"][disabled],
+input[type="datetime"][disabled],
+input[type="datetime-local"][disabled],
+input[type="week"][disabled],
+input[type="number"][disabled],
+input[type="search"][disabled],
+input[type="tel"][disabled],
+input[type="color"][disabled],
+select[disabled],
+textarea[disabled],
+input[readonly],
+select[readonly],
+textarea[readonly] {
     cursor: not-allowed;
     background-color: #eaeded;
     color: #cad2d3;
     border-color: transparent;
 }
-.pure-form input:focus:invalid,
-.pure-form textarea:focus:invalid,
-.pure-form select:focus:invalid {
+input:focus:invalid,
+textarea:focus:invalid,
+select:focus:invalid {
     color: #b94a48;
     border: 1px solid #ee5f5b;
 }
-.pure-form input:focus:invalid:focus,
-.pure-form textarea:focus:invalid:focus,
-.pure-form select:focus:invalid:focus {
+input:focus:invalid:focus,
+textarea:focus:invalid:focus,
+select:focus:invalid:focus {
     border-color: #e9322d;
 }
-.pure-form input[type="file"]:focus:invalid:focus,
-.pure-form input[type="radio"]:focus:invalid:focus,
-.pure-form input[type="checkbox"]:focus:invalid:focus {
+input[type="file"]:focus:invalid:focus,
+input[type="radio"]:focus:invalid:focus,
+input[type="checkbox"]:focus:invalid:focus {
     outline-color: #e9322d;
 }
-.pure-form select {
+select {
     border: 1px solid #ccc;
     background-color: white;
 }
-.pure-form select[multiple] {
+select[multiple] {
     height: auto;
 }
-.pure-form label {
+label {
     margin: 0.5em 0 0.2em;
     color: #999;
     font-size: 90%;
 }
-.pure-form fieldset {
+fieldset {
     margin: 0;
     padding: 0.35em 0 0.75em;
     border: 0;
 }
-.pure-form legend {
+legend {
     display: block;
     width: 100%;
     padding: 0.3em 0;
@@ -130,23 +130,23 @@
     border-bottom: 1px solid #e5e5e5;
 }
 
-.pure-form-stacked input[type="text"],
-.pure-form-stacked input[type="password"],
-.pure-form-stacked input[type="email"],
-.pure-form-stacked input[type="url"],
-.pure-form-stacked input[type="date"],
-.pure-form-stacked input[type="month"],
-.pure-form-stacked input[type="time"],
-.pure-form-stacked input[type="datetime"],
-.pure-form-stacked input[type="datetime-local"],
-.pure-form-stacked input[type="week"],
-.pure-form-stacked input[type="number"],
-.pure-form-stacked input[type="search"],
-.pure-form-stacked input[type="tel"],
-.pure-form-stacked input[type="color"],
-.pure-form-stacked select,
-.pure-form-stacked label,
-.pure-form-stacked textarea {
+.form-stacked input[type="text"],
+.form-stacked input[type="password"],
+.form-stacked input[type="email"],
+.form-stacked input[type="url"],
+.form-stacked input[type="date"],
+.form-stacked input[type="month"],
+.form-stacked input[type="time"],
+.form-stacked input[type="datetime"],
+.form-stacked input[type="datetime-local"],
+.form-stacked input[type="week"],
+.form-stacked input[type="number"],
+.form-stacked input[type="search"],
+.form-stacked input[type="tel"],
+.form-stacked input[type="color"],
+.form-stacked select,
+.form-stacked label,
+.form-stacked textarea {
     display: block;
 }
 
@@ -178,16 +178,16 @@
 }
 
 /* Rounded Inputs */
-.pure-form .pure-input-rounded {
+.pure-input-rounded {
     border-radius: 20px;
     padding-left: 1em;
 }
 
 /* Grouped Inputs */
-.pure-form .pure-group fieldset {
+.pure-group fieldset {
     margin-bottom: 10px;
 }
-.pure-form .pure-group input {
+.pure-group input {
     display: block;
     padding: 10px;
     margin: 0;
@@ -195,40 +195,40 @@
     position: relative;
     top: -1px;
 }
-.pure-form .pure-group input:focus {
+.pure-group input:focus {
     z-index: 2;
 }
-.pure-form .pure-group input:first-child {
+.pure-group input:first-child {
     top: 1px;
     border-radius: 4px 4px 0 0;
 }
-.pure-form .pure-group input:last-child {
+.pure-group input:last-child {
     top: -2px;
     border-radius: 0 0 4px 4px;
 }
-.pure-form .pure-group button {
+.pure-group button {
     margin: 0.35em 0;
 }
 
-.pure-form .pure-input-1 {
+.pure-input-1 {
     width: 100%;
 }
-.pure-form .pure-input-2-3 {
+.pure-input-2-3 {
     width: 66%;
 }
-.pure-form .pure-input-1-2 {
+.pure-input-1-2 {
     width: 50%;
 }
-.pure-form .pure-input-1-3 {
+.pure-input-1-3 {
     width: 33%;
 }
-.pure-form .pure-input-1-4 {
+.pure-input-1-4 {
     width: 25%;
 }
 
 /* Inline help for forms */
 /* NOTE: pure-help-inline is deprecated. Use .pure-form-message-inline instead. */
-.pure-form .pure-help-inline,
+.pure-help-inline,
 .pure-form-message-inline {
     display: inline-block;
     padding-left: 0.3em;
