--- a/src/menus/css/menus-paginator.css
+++ b/src/menus/css/menus-paginator.css
@@ -1,34 +1,34 @@
 /*csslint box-model:false*/
 /*TODO: Remove this lint rule override after a refactor of this code.*/
 
-.pure-paginator {
+.pager {
     list-style: none;
     margin: 0;
     padding: 0;
 }
-.pure-paginator li {
+.pager li {
     display: inline-block;
     *display: inline;
     zoom: 1;
     margin: 0 -0.35em 0 0;
 }
-.pure-paginator .pure-button {
+.pager .btn {
     border-radius: 0;
     padding: 0.8em 1.4em;
     vertical-align: top;
     height: 1.1em;
 }
-.pure-paginator .pure-button:focus {
+.pager .btn:focus {
     outline-style: none;
 }
-.pure-paginator .prev,
-.pure-paginator .next {
+.pager .prev,
+.pager .next {
     color: #C0C1C3;
     text-shadow: 0 -1px 0 rgba(0,0,0, 0.45);
 }
-.pure-paginator .prev {
+.pager .prev {
     border-radius: 2px 0 0 2px;
 }
-.pure-paginator .next {
+.pager .next {
     border-radius: 0 2px 2px 0;
 }
