--- a/src/menus/css/menus.css
+++ b/src/menus/css/menus.css
@@ -3,68 +3,68 @@
 
 /* MAIN MENU STYLING */
 
-.pure-menu.pure-menu-open,
-.pure-menu.pure-menu-horizontal li .pure-menu-children {
+.menu.menu-open,
+.menu.menu-horizontal li .menu-children {
     background: #fff; /* Old browsers */
     border: 1px solid #b7b7b7;
 }
 
 /* remove borders for horizontal menus */
-.pure-menu.pure-menu-horizontal,
-.pure-menu.pure-menu-horizontal .pure-menu-heading {
+.menu.menu-horizontal,
+.menu.menu-horizontal .menu-heading {
     border: none;
 }
 
 
 /* LINK STYLES */
 
-.pure-menu a {
+.menu a {
     border: 1px solid transparent;
     border-left: none;
     border-right: none;
 
 }
 
-.pure-menu a,
-.pure-menu .pure-menu-can-have-children > li:after {
+.menu a,
+.menu .menu-can-have-children > li:after {
     color: #777;
 }
 
-.pure-menu .pure-menu-can-have-children > li:hover:after {
+.menu .menu-can-have-children > li:hover:after {
     color: #fff;
 }
 
 /* Focus style for a dropdown menu-item when the parent has been opened */
-.pure-menu .pure-menu-open {
+.menu .menu-open {
     background: #dedede;
 }
 
 
-.pure-menu li a:hover,
-.pure-menu li a:focus {
+.menu li a:hover,
+.menu li a:focus {
     background: #eee;
 }
 
 /* DISABLED STATES */
-.pure-menu li.pure-menu-disabled a:hover,
-.pure-menu li.pure-menu-disabled a:focus {
+.menu li.menu-disabled a:hover,
+.menu li.menu-disabled a:focus {
     background: #fff;
     color: #bfbfbf;
 }
 
-.pure-menu .pure-menu-disabled > a {
+.menu .menu-disabled > a {
     background-image: none;
     border-color: transparent;
     cursor: default;
 }
 
-.pure-menu .pure-menu-disabled > a,
-.pure-menu .pure-menu-can-have-children.pure-menu-disabled > a:after {
+.menu .menu-disabled > a,
+.menu .menu-can-have-children.menu-disabled > a:after {
     color: #bfbfbf;
 }
 
 /* HEADINGS */
-.pure-menu .pure-menu-heading {
+.menu .menu-heading {
     color: #565d64;
     text-transform: uppercase;
     font-size: 90%;
@@ -75,12 +75,12 @@
 }
 
 /* ACTIVE MENU ITEM */
-.pure-menu .pure-menu-selected a {
+.menu .menu-selected a {
     color: #000;
 }
 
 /* FIXED MENU */
-.pure-menu.pure-menu-open.pure-menu-fixed {
+.menu.menu-open.menu-fixed {
     border: none;
     border-bottom: 1px solid #b7b7b7;
 }
