--- a/src/forms/css/forms.css
+++ b/src/forms/css/forms.css
@@ -1,19 +1,19 @@
-input[type="text"],
-input[type="password"],
-input[type="email"],
-input[type="url"],
-input[type="date"],
-input[type="month"],
-input[type="time"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="week"],
-input[type="number"],
-input[type="search"],
-input[type="tel"],
-input[type="color"],
-select,
-textarea {
+.form input[type="text"],
+.form input[type="password"],
+.form input[type="email"],
+.form input[type="url"],
+.form input[type="date"],
+.form input[type="month"],
+.form input[type="time"],
+.form input[type="datetime"],
+.form input[type="datetime-local"],
+.form input[type="week"],
+.form input[type="number"],
+.form input[type="search"],
+.form input[type="tel"],
+.form input[type="color"],
+.form select,
+.form textarea {
     padding: 0.5em 0.6em;
     display: inline-block;
     border: 1px solid #ccc;
@@ -31,96 +31,96 @@ textarea {
     -webkit-font-smoothing: antialiased;
 }
 
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="email"]:focus,
-input[type="url"]:focus,
-input[type="date"]:focus,
-input[type="month"]:focus,
-input[type="time"]:focus,
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus,
-input[type="week"]:focus,
-input[type="number"]:focus,
-input[type="search"]:focus,
-input[type="tel"]:focus,
-input[type="color"]:focus,
-select:focus,
-textarea:focus {
+.form input[type="text"]:focus,
+.form input[type="password"]:focus,
+.form input[type="email"]:focus,
+.form input[type="url"]:focus,
+.form input[type="date"]:focus,
+.form input[type="month"]:focus,
+.form input[type="time"]:focus,
+.form input[type="datetime"]:focus,
+.form input[type="datetime-local"]:focus,
+.form input[type="week"]:focus,
+.form input[type="number"]:focus,
+.form input[type="search"]:focus,
+.form input[type="tel"]:focus,
+.form input[type="color"]:focus,
+.form select:focus,
+.form textarea:focus {
     outline: 0;
     outline: thin dotted \9; /* IE6-9 */
     border-color: #129FEA;
 }
 
-input[type="file"]:focus,
-input[type="radio"]:focus,
-input[type="checkbox"]:focus {
+.form input[type="file"]:focus,
+.form input[type="radio"]:focus,
+.form input[type="checkbox"]:focus {
     outline: thin dotted #333;
     outline: 1px auto #129FEA;
 }
-.pure-checkbox,
-.pure-radio {
+.form .pure-checkbox,
+.form .pure-radio {
     margin: 0.5em 0;
     display: block;
 }
-input[type="text"][disabled],
-input[type="password"][disabled],
-input[type="email"][disabled],
-input[type="url"][disabled],
-input[type="date"][disabled],
-input[type="month"][disabled],
-input[type="time"][disabled],
-input[type="datetime"][disabled],
-input[type="datetime-local"][disabled],
-input[type="week"][disabled],
-input[type="number"][disabled],
-input[type="search"][disabled],
-input[type="tel"][disabled],
-input[type="color"][disabled],
-select[disabled],
-textarea[disabled],
-input[readonly],
-select[readonly],
-textarea[readonly] {
+.form input[type="text"][disabled],
+.form input[type="password"][disabled],
+.form input[type="email"][disabled],
+.form input[type="url"][disabled],
+.form input[type="date"][disabled],
+.form input[type="month"][disabled],
+.form input[type="time"][disabled],
+.form input[type="datetime"][disabled],
+.form input[type="datetime-local"][disabled],
+.form input[type="week"][disabled],
+.form input[type="number"][disabled],
+.form input[type="search"][disabled],
+.form input[type="tel"][disabled],
+.form input[type="color"][disabled],
+.form select[disabled],
+.form textarea[disabled],
+.form input[readonly],
+.form select[readonly],
+.form textarea[readonly] {
     cursor: not-allowed;
     background-color: #eaeded;
     color: #cad2d3;
     border-color: transparent;
 }
-input:focus:invalid,
-textarea:focus:invalid,
-select:focus:invalid {
+.form input:focus:invalid,
+.form textarea:focus:invalid,
+.form select:focus:invalid {
     color: #b94a48;
     border: 1px solid #ee5f5b;
 }
-input:focus:invalid:focus,
-textarea:focus:invalid:focus,
-select:focus:invalid:focus {
+.form input:focus:invalid:focus,
+.form textarea:focus:invalid:focus,
+.form select:focus:invalid:focus {
     border-color: #e9322d;
 }
-input[type="file"]:focus:invalid:focus,
-input[type="radio"]:focus:invalid:focus,
-input[type="checkbox"]:focus:invalid:focus {
+.form input[type="file"]:focus:invalid:focus,
+.form input[type="radio"]:focus:invalid:focus,
+.form input[type="checkbox"]:focus:invalid:focus {
     outline-color: #e9322d;
 }
-select {
+.form select {
     border: 1px solid #ccc;
     background-color: white;
 }
-select[multiple] {
+.form select[multiple] {
     height: auto;
 }
-label {
+.form label {
     margin: 0.5em 0 0.2em;
     color: #999;
     font-size: 90%;
 }
-fieldset {
+.form fieldset {
     margin: 0;
     padding: 0.35em 0 0.75em;
     border: 0;
 }
-legend {
+.form legend {
     display: block;
     width: 100%;
     padding: 0.3em 0;
@@ -150,12 +150,12 @@ legend {
     display: block;
 }
 
-.pure-form-aligned input,
-.pure-form-aligned textarea,
-.pure-form-aligned select,
-/* NOTE: pure-help-inline is deprecated. Use .pure-form-message-inline instead. */
-.pure-form-aligned .pure-help-inline,
-.pure-form-message-inline {
+.form-aligned input,
+.form-aligned textarea,
+.form-aligned select,
+/* NOTE: pure-help-inline is deprecated. Use .form-message-inline instead. */
+.form-aligned .pure-help-inline,
+.form-message-inline {
     display: inline-block;
     *display: inline;
     *zoom: 1;
@@ -163,31 +163,31 @@ legend {
 }
 
 /* Aligned Forms */
-.pure-form-aligned .pure-control-group {
+.form-aligned .pure-control-group {
     margin-bottom: 0.5em;
 }
-.pure-form-aligned .pure-control-group label {
+.form-aligned .pure-control-group label {
     text-align: right;
     display: inline-block;
     vertical-align: middle;
     width: 10em;
     margin: 0 1em 0 0;
 }
-.pure-form-aligned .pure-controls {
+.form-aligned .pure-controls {
     margin: 1.5em 0 0 10em;
 }
 
 /* Rounded Inputs */
-.pure-input-rounded {
+.form .input-rounded {
     border-radius: 20px;
     padding-left: 1em;
 }
 
 /* Grouped Inputs */
-.pure-group fieldset {
+.form .group fieldset {
     margin-bottom: 10px;
 }
-.pure-group input {
+.form .group input {
     display: block;
     padding: 10px;
     margin: 0;
@@ -195,41 +195,41 @@ legend {
     position: relative;
     top: -1px;
 }
-.pure-group input:focus {
+.form .group input:focus {
     z-index: 2;
 }
-.pure-group input:first-child {
+.form .group input:first-child {
     top: 1px;
     border-radius: 4px 4px 0 0;
 }
-.pure-group input:last-child {
+.form .group input:last-child {
     top: -2px;
     border-radius: 0 0 4px 4px;
 }
-.pure-group button {
+.form .group button {
     margin: 0.35em 0;
 }
 
-.pure-input-1 {
+.form .input-1 {
     width: 100%;
 }
-.pure-input-2-3 {
+.form .input-2-3 {
     width: 66%;
 }
-.pure-input-1-2 {
+.form .input-1-2 {
     width: 50%;
 }
-.pure-input-1-3 {
+.form .input-1-3 {
     width: 33%;
 }
-.pure-input-1-4 {
+.form .input-1-4 {
     width: 25%;
 }
 
 /* Inline help for forms */
-/* NOTE: pure-help-inline is deprecated. Use .pure-form-message-inline instead. */
-.pure-help-inline,
-.pure-form-message-inline {
+/* NOTE: pure-help-inline is deprecated. Use .form-message-inline instead. */
+.form .pure-help-inline,
+.form-message-inline {
     display: inline-block;
     padding-left: 0.3em;
     color: #666;
@@ -238,7 +238,7 @@ legend {
 }
 
 /* Block help for forms */
-.pure-form-message {
+.form-message {
     display: block;
     color: #666;
     font-size: 90%;
