--- a/src/forms/css/forms.css
+++ b/src/forms/css/forms.css
@@ -17,7 +17,7 @@
     padding: 0.5em 0.6em;
     display: inline-block;
     border: 1px solid #ccc;
-    font-size: 0.8em;
+    font-size: 0.9em;
     box-shadow: inset 0 1px 3px #ddd;
     border-radius: 4px;
     -webkit-transition: 0.3s linear border;
@@ -47,6 +47,7 @@
 .form input[type="color"]:focus,
 .form select:focus,
 .form textarea:focus {
+    color: #333;
     outline: 0;
     outline: thin dotted \9; /* IE6-9 */
     border-color: #129FEA;
