--- a/src/extras/css/extras.css
+++ b/src/extras/css/extras.css
@@ -314,12 +314,12 @@ img {
   padding: 8px 20px;
 }
 
-.container { position: relative; padding: 0 20px; max-width: 960px; }
+.container { position: relative; padding: 0 20px; max-width: 960px; margin: 0 auto; }
 .container-fluid { max-width: 100% }
 
 .box {
   width: 300px;
-  margin: 20px auto;
+  margin: 40px auto 0;
   padding: 20px 30px;
   border: 1px solid #ccc;
   background: #fafafa;
