--- a/src/fonts/css/fonts.css
+++ b/src/fonts/css/fonts.css
@@ -13,6 +13,11 @@ a { color: #0088cc }
 
 p { margin: 0 0 1em }
 
+abbr,acronym {
+	border-bottom: 1px dotted #000;
+	cursor: help;
+}
+
 h1, h2, h3, h4 {
   -webkit-font-smoothing: antialiased;
   line-height: 1.1em;
