--- a/src/forms/css/forms-r.css
+++ b/src/forms/css/forms-r.css
@@ -1,4 +1,5 @@
 @media only screen and (max-width : 480px) {
+    .form input[type="submit"], 
     .form button[type="submit"] {
         width: 100%;
         margin: 0.7em 0 0;
@@ -18,6 +19,8 @@
     .form input[type="search"],
     .form input[type="tel"],
     .form input[type="color"],
+    .form textarea,
+    .form select,
     .form label {
         width: 100%;
         margin-bottom: 0.3em;
