--- a/src/buttons/css/buttons.css
+++ b/src/buttons/css/buttons.css
@@ -74,3 +74,39 @@
     background-color: rgb(0, 120, 231);
     color: #fff;
 }
+
+
+/* BUTTON IMPROVEMENTS */
+
+.btn-block {
+    display: block;
+}
+
+.btn.btn-small {
+    padding: .6em 2em .65em;
+    font-size:70%;
+}
+.btn.btn-large {
+    padding: .8em 5em .9em;
+    font-size:110%;
+}
+.btn.btn-selected {
+    background-color: #345fcb;
+    color: #fff;
+}
+.btn.btn-secondary {
+    background: rgb(161, 195, 238);
+    color: rgb(26, 88, 122);
+}
+.btn.btn-error {
+    background: rgb(214, 86, 75);
+    color: white;
+}
+.btn.btn-success {
+    background: rgb(54, 197, 71);
+    color: white;
+}
+.btn.btn-warning {
+    background: rgb(255, 163, 0);
+    color: white;
+}
