--- a/src/forms/css/forms.css
+++ b/src/forms/css/forms.css
@@ -59,11 +59,12 @@
     outline: thin dotted #333;
     outline: 1px auto #129FEA;
 }
-.form .pure-checkbox,
-.form .pure-radio {
+.form .checkbox,
+.form .radio {
     margin: 0.5em 0;
     display: block;
 }
+
 .form input[type="text"][disabled],
 .form input[type="password"][disabled],
 .form input[type="email"][disabled],
@@ -155,7 +156,7 @@
 .form-aligned textarea,
 .form-aligned select,
 /* NOTE: pure-help-inline is deprecated. Use .form-message-inline instead. */
-.form-aligned .pure-help-inline,
+.form-aligned .help-inline,
 .form-message-inline {
     display: inline-block;
     *display: inline;
@@ -164,17 +165,17 @@
 }
 
 /* Aligned Forms */
-.form-aligned .pure-control-group {
+.form-aligned .control-group {
     margin-bottom: 0.5em;
 }
-.form-aligned .pure-control-group label {
+.form-aligned .control-group label {
     text-align: right;
     display: inline-block;
     vertical-align: middle;
     width: 10em;
     margin: 0 1em 0 0;
 }
-.form-aligned .pure-controls {
+.form-aligned .controls {
     margin: 1.5em 0 0 10em;
 }
 
@@ -229,7 +230,7 @@
 
 /* Inline help for forms */
 /* NOTE: pure-help-inline is deprecated. Use .form-message-inline instead. */
-.form .pure-help-inline,
+.form .help-inline,
 .form-message-inline {
     display: inline-block;
     padding-left: 0.3em;
