Fixed menus. Removed '.menu-open'.

--- a/src/menus/css/menus.css
+++ b/src/menus/css/menus.css
@@ -3,7 +3,6 @@
 
 /* MAIN MENU STYLING */
 
-.menu.menu-open,
 .menu.menu-horizontal li .menu-children {
     background: #fff; /* Old browsers */
     border: 1px solid #b7b7b7;
@@ -30,11 +29,6 @@
 
 .menu .menu-can-have-children > li:hover:after {
     color: #fff;
-}
-
-/* Focus style for a dropdown menu-item when the parent has been opened */
-.menu .menu-open {
-    background: #dedede;
 }
 
 .menu li a:hover,
@@ -65,7 +59,7 @@
     color: #565d64;
     text-transform: uppercase;
     font-size: 90%;
-    margin-top: 0.5em;
+    margin-top: 10px;
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: #dfdfdf;
@@ -76,11 +70,37 @@
     color: #000;
 }
 
-/* FIXED MENU */
-.menu.menu-open.menu-fixed {
-    border: none;
-    border-bottom: 1px solid #b7b7b7;
+/* navbar
+-------------------------------------------------------------*/
+
+.navbar.menu {
+  margin-bottom: 20px;
+  overflow: visible;
+  color: #777777;
+  min-height: 42px;
+  border-bottom: 1px solid #eee; 
+  background: #fafafa;
 }
+
+.navbar > *, 
+.navbar .container > * {
+  float: left;
+}
+
+.navbar-black {
+  background: #1b1b1b;  
+}
+
+.navbar li {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 12px;
+}
+
+.navbar li a {
+  padding: 15px 20px;
+}
+
 
 /* tabs
 ----------------------------------------------- */
@@ -88,6 +108,7 @@
 ul.tabs {
   border-bottom: 1px solid #b7b7b7 !important;
   padding: 0 1em;
+  margin-bottom: 2em;
 }
 
 .tabs li {
