--- a/src/menus/css/menus.css
+++ b/src/menus/css/menus.css
@@ -101,6 +101,16 @@
   padding: 15px 20px;
 }
 
+/* apply clearfix on navbar, since it floats everything */
+.navbar:before,
+.navbar:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.navbar:after {
+    clear: both;
+}
 
 /* tabs
 ----------------------------------------------- */
