--- a/src/menus/css/menus.css
+++ b/src/menus/css/menus.css
@@ -73,7 +73,7 @@
 /* navbar
 -------------------------------------------------------------*/
 
-.navbar.menu {
+.navbar {
   margin-bottom: 20px;
   overflow: visible;
   color: #777777;
@@ -87,7 +87,7 @@
   float: left;
 }
 
-.menu.navbar-black {
+.navbar-black {
   background: #1b1b1b;  
 }
 
@@ -115,11 +115,8 @@
 /* menu icon
 ----------------------------------------------- */
 
-.menu .menu-icon {
-  display: none;
-}
-
 .menu-icon {
+  display: none;
   position: relative;
   font-size: 24px;
   padding: 0.6em 0.8em;
