Removed pager.css. Added attribution headers for Pure CSS (Yahoo) and Boostrap (Twitter).

--- a/src/menus.css
+++ b/src/menus.css
@@ -1,4 +1,9 @@
-/*csslint adjoining-classes:false*/
+/*
+ Pure v0.0.3
+ Copyright 2013 Yahoo! Inc. All rights reserved.
+ Licensed under the BSD License.
+ https://github.com/yui/pure/blob/master/LICENSE.md
+*/
 
 .menu li {
   list-style: none;
