--- a/src/forms.css
+++ b/src/forms.css
@@ -1,3 +1,10 @@
+/*
+ Pure v0.0.3
+ Copyright 2013 Yahoo! Inc. All rights reserved.
+ Licensed under the BSD License.
+ https://github.com/yui/pure/blob/master/LICENSE.md
+*/
+
 .form input[type="text"],
 .form input[type="password"],
 .form input[type="email"],
