--- a/src/tables.css
+++ b/src/tables.css
@@ -1,9 +1,10 @@
-table {
-  max-width: 100%;
-  background-color: transparent;
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+/*!
+ * Tables CSS from Bootstrap v2.3.2
+ *
+ * Copyright 2012 Twitter, Inc
+ * Licensed under the Apache License v2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
+ */
 
 .table {
   width: 100%;
