Removed popover CSS.

--- a/src/extras.css
+++ b/src/extras.css
@@ -80,85 +80,31 @@
   border-color: #d6e9c6;
 }
 
-/* Contextual Modals */
+/* tabs
+----------------------------------------------- */
 
-.popover {
-  position: relative;
-  width: 300px;
-  background-color: #f0f1f3;
-  color: #2f3034;
-  padding: 15px;
-  border: 1px solid #bfc0c8;
-  -webkit-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-
-  box-padding: border-box;
-  -webkit-background-clip: padding-box;
-  -moz-background-clip: padding;
-  background-clip: padding-box;
+ul.tabs {
+  border-bottom: 1px solid #b7b7b7 !important;
+  padding: 0 1em;
+  margin-bottom: 2em;
 }
 
-.arrow-border, .arrow {
-  border-style: solid;
-  border-width: 10px;
-  height:0;
-  width:0;
-  position:absolute;
+.tabs li {
+  border: 1px solid #b7b7b7;
+  border-bottom: 0;
 }
 
-
-/* POPOVER ARROW POSITIONING BOTTOM */
-
-.popover.bottom .arrow-border {
-  border-color: #bfc0c8 transparent transparent transparent;
-  bottom: -20px;
-  left: 50%;
-}
-.popover.bottom .arrow {
-  border-color: #f0f1f3 transparent transparent transparent;
-  bottom:-19px;
-  left: 50%;
+.tabs li.active {
+  border-bottom: 1px solid #fff;
+  margin-bottom: -1px;
 }
 
-/* POPOVER ARROW POSITIONING TOP*/
-
-.popover.top .arrow-border {
-  border-color: transparent transparent #bfc0c8 transparent;
-  top: -21px;
-  left: 50%;
-}
-.popover.top .arrow {
-  border-color: transparent transparent #f0f1f3 transparent;
-  top:-20px;
-  left: 50%;
+.tab-content > * {
+  display: none;
 }
 
-/* POPOVER ARROW POSITIONING RIGHT*/
-
-.popover.right .arrow-border {
-  border-color: transparent transparent transparent #bfc0c8;
-  top: 45%;
-  right: -21px;
-}
-.popover.right .arrow {
-  border-color: transparent transparent transparent #f0f1f3;
-  top:45%;
-  right: -20px;
-}
-
-
-/* POPOVER ARROW POSITIONING LEFT*/
-
-.popover.left .arrow-border {
-  border-color: transparent #bfc0c8 transparent transparent;
-  top: 45%;
-  left: -21px;
-}
-.popover.left .arrow {
-  border-color: transparent #f0f1f3 transparent transparent;
-  top:45%;
-  left: -20px;
+.tab-content > .active {
+  display: inherit;
 }
 
 /* box
