--- a/src/menus.css
+++ b/src/menus.css
@@ -10,6 +10,7 @@
   margin: 0;
   padding: 0;
   z-index: 1;
+  line-height: 24px;
 }
 
 .menu > ul { position: relative; }
@@ -38,8 +39,6 @@
   vertical-align: middle;
 }
 
-.menu li a { padding: 8px 20px; }
-
 .menu-can-have-children > .menu-label:after {
   content: '\25B8';
   float: right;
@@ -66,18 +65,10 @@
   display: none;
 }
 
-/* FIXED MENU */
-.menu-fixed {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-
-
 /* HORIZONTAL MENU CODE */
 
 /* Initial menus should be inline-block so that they are horizontal */
+.navbar .menu li,
 .menu-horizontal li {
   display: inline-block;
   *display: inline;
@@ -101,18 +92,17 @@
 
 /* Adjusting separator for vertical menus */
 .menu-horizontal li.menu-separator {
-height: 50%;
-width: 1px;
-margin: 0 7px;
+  height: 50%;
+  width: 1px;
+  margin: 0 7px;
 }
 
 /* Submenus should be horizontal separator again */
 .menu-horizontal li li.menu-separator {
-height: 1px;
-width: auto;
-margin: 7px 2px;
+  height: 1px;
+  width: auto;
+  margin: 7px 2px;
 }
-
 
 
 /* MAIN MENU STYLING */
@@ -205,10 +195,6 @@ margin: 7px 2px;
   float: none !important;
 }
 
-.navbar-black {
-  background: #1b1b1b;
-}
-
 .navbar li {
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -228,6 +214,17 @@ margin: 7px 2px;
 
 .navbar:after {
     clear: both;
+}
+
+/* menu icon
+----------------------------------------------- */
+
+.navbar-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100;
 }
 
 /* menu icon
@@ -256,27 +253,20 @@ margin: 7px 2px;
   border-bottom: 0.15em solid #666;
 }
 
-.navbar-black .menu-icon:before {
-  border-color: #ccc;
-}
-
-/* tabs
+/* black navbar
 ----------------------------------------------- */
 
-ul.tabs {
-  border-bottom: 1px solid #b7b7b7 !important;
-  padding: 0 1em;
-  margin-bottom: 2em;
+.navbar.dark {
+  background: #1b1b1b;
 }
 
-.tabs li {
-  border: 1px solid #b7b7b7;
-  border-bottom: 0;
+.dark .menu li a:hover,
+.dark .menu li a:focus {
+  background: #222;
 }
 
-.tabs li.active {
-  border-bottom: 1px solid #fff;
-  margin-bottom: -1px;
+.dark .menu-icon:before {
+  border-color: #ccc;
 }
 
 /* dropdown
