--- a/src/buttons.css
+++ b/src/buttons.css
@@ -113,26 +113,29 @@
 
 .btn.btn-small {
   padding: .6em 2em .65em;
-  font-size:70%;
+  font-size: 70%;
 }
 .btn.btn-large {
   padding: .8em 5em .9em;
-  font-size:110%;
+  font-size: 110%;
 }
 .btn.btn-selected {
   background-color: #345fcb;
   color: #fff;
 }
+
 .btn.btn-secondary {
   background: rgb(161, 195, 238);
   color: rgb(26, 88, 122);
 }
+
+.btn.btn-danger,
 .btn.btn-error {
   background: rgb(214, 86, 75);
   color: white;
 }
 .btn.btn-success {
-  background: rgb(54, 197, 71);
+  background: rgb(64, 189, 79);
   color: white;
 }
 .btn.btn-warning {
